--- a/01 Starting Project/styles.css
+++ b/01 Starting Project/styles.css
@@ -5,8 +5,8 @@ html {
 body {
   margin: 0;
   text-align: center;
-  background-color: #322e2d;
-  color: #f6f0ee;
+  background-color: #07085c;
+  color: #f6f6ee;
 }
 
 #logo {
